public class Main {
    public static void main(String[] args) {
    Streaming streaming = new Streaming("---------------------- \n" +
                                              "Streamning'n'Dreamning \n" +
                                              "----------------------");
    streaming.startStreaming();
    }
}